fix get_labels_hours issue

--- a/src/Notebooks/2_Repair/3.0_Get_labels.ipynb
+++ b/src/Notebooks/2_Repair/3.0_Get_labels.ipynb
@@ -1191,7 +1191,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = make_subplots(3,1, shared_xaxes=True)\n",
+    "import datetime\n",
+    "\n",
+    "precipitacao_cols = [c for c in df_m.columns if 'Precipitacao'in c]\n",
+    "\n",
+    "ano = 2019\n",
+    "mes = 2\n",
+    "\n",
+    "ip_ano = df_m[(df_m['Data'].dt.year == ano) & (df_m['Data'].dt.month == mes)]\n",
+    "\n",
+    "for col in precipitacao_cols:\n",
+    "    fig.add_trace(\n",
+    "        go.Scatter(\n",
+    "            x = ip_ano['Data'],\n",
+    "            y = ip_ano[col],\n",
+    "            name = col,\n",
+    "            connectgaps=False),\n",
+    "        row = 1, col = 1)\n",
+    "\n",
+    "for i in range(6):\n",
+    "    fig.add_trace(\n",
+    "        go.Bar(\n",
+    "            x = ip_ano['Data'] + datetime.timedelta(hours = 12),\n",
+    "            y = ip_ano[f'LocalMax_{i}'],\n",
+    "            name = f'LocalMax_{i}',),\n",
+    "        row = 2, col = 1)\n",
+    "\n",
+    "fig.add_trace(\n",
+    "    go.Bar(\n",
+    "        x = ip_ano['Data'] + datetime.timedelta(hours = 12),\n",
+    "        y = ip_ano['LocalMax'],\n",
+    "        name = 'Local Max',),\n",
+    "    row = 3, col = 1)\n",
+    "\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1199,270 +1242,6 @@
     "interest_cols =  [c for c in df_m.columns if 'Local' in c]\n",
     "df_m = df_m[['Data']  + interest_cols]\n",
     "df_m = df_m[df_m[interest_cols].sum(axis = 1) > 0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Data</th>\n",
-       "      <th>LocalMax</th>\n",
-       "      <th>LocalMax_0</th>\n",
-       "      <th>LocalMax_1</th>\n",
-       "      <th>LocalMax_2</th>\n",
-       "      <th>LocalMax_3</th>\n",
-       "      <th>LocalMax_4</th>\n",
-       "      <th>LocalMax_ow</th>\n",
-       "      <th>Local_0</th>\n",
-       "      <th>Local_1</th>\n",
-       "      <th>Local_2</th>\n",
-       "      <th>Local_3</th>\n",
-       "      <th>Local_4</th>\n",
-       "      <th>Local_Null</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2010-01-07</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>2010-01-08</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>2010-01-11</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>2010-01-19</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>2010-01-20</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>2010-01-21</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>2010-01-22</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>2010-01-24</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>2010-01-25</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>2010-01-26</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         Data  LocalMax  LocalMax_0  LocalMax_1  LocalMax_2  LocalMax_3  \\\n",
-       "6  2010-01-07         1           1           1           1           1   \n",
-       "7  2010-01-08         0           0           0           0           0   \n",
-       "10 2010-01-11         0           0           0           0           0   \n",
-       "18 2010-01-19         0           0           0           0           0   \n",
-       "19 2010-01-20         1           1           1           1           1   \n",
-       "20 2010-01-21         0           0           0           0           0   \n",
-       "21 2010-01-22         0           0           0           0           0   \n",
-       "23 2010-01-24         0           0           0           0           0   \n",
-       "24 2010-01-25         0           0           0           0           0   \n",
-       "25 2010-01-26         0           0           0           0           0   \n",
-       "\n",
-       "    LocalMax_4  LocalMax_ow  Local_0  Local_1  Local_2  Local_3  Local_4  \\\n",
-       "6            1            1      0.0      4.0      0.0      0.0     21.0   \n",
-       "7            0            0      0.0      0.0      0.0      0.0     11.0   \n",
-       "10           0            0      0.0      1.0      0.0      0.0      1.0   \n",
-       "18           0            0      0.0      0.0      3.0      1.0      3.0   \n",
-       "19           1            0      0.0      0.0      4.0      0.0     11.0   \n",
-       "20           0            0      0.0      1.0      1.0      0.0      3.0   \n",
-       "21           0            0      0.0      0.0      0.0      1.0      2.0   \n",
-       "23           0            0      0.0      0.0      0.0      1.0      0.0   \n",
-       "24           0            0      0.0      0.0      1.0      0.0      0.0   \n",
-       "25           0            0      0.0      0.0      0.0      1.0      0.0   \n",
-       "\n",
-       "    Local_Null  \n",
-       "6          0.0  \n",
-       "7          0.0  \n",
-       "10         0.0  \n",
-       "18         1.0  \n",
-       "19         1.0  \n",
-       "20         0.0  \n",
-       "21         0.0  \n",
-       "23         0.0  \n",
-       "24         0.0  \n",
-       "25         0.0  "
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_m.head(10)"
    ]
   }
  ],
