repair precipitacao done - interpolation + ow

--- a/src/Notebooks/2_Repair/4.0_Repair_Precipitacao.ipynb
+++ b/src/Notebooks/2_Repair/4.0_Repair_Precipitacao.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,140 +17,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Data_Hora</th>\n",
-       "      <th>index</th>\n",
-       "      <th>UmidadeRelativa_0</th>\n",
-       "      <th>PressaoAtmosferica_0</th>\n",
-       "      <th>TemperaturaDoAr_0</th>\n",
-       "      <th>TemperaturaInterna_0</th>\n",
-       "      <th>PontoDeOrvalho_0</th>\n",
-       "      <th>SensacaoTermica_0</th>\n",
-       "      <th>RadiacaoSolar_0</th>\n",
-       "      <th>DirecaoDoVento_0</th>\n",
-       "      <th>...</th>\n",
-       "      <th>PressaoAtmosferica_4</th>\n",
-       "      <th>TemperaturaDoAr_4</th>\n",
-       "      <th>TemperaturaInterna_4</th>\n",
-       "      <th>PontoDeOrvalho_4</th>\n",
-       "      <th>SensacaoTermica_4</th>\n",
-       "      <th>RadiacaoSolar_4</th>\n",
-       "      <th>DirecaoDoVento_4</th>\n",
-       "      <th>VelocidadeDoVento_4</th>\n",
-       "      <th>Precipitacao_4</th>\n",
-       "      <th>Local_4</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2011-01-01 00:00:00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>84.8</td>\n",
-       "      <td>920.6</td>\n",
-       "      <td>20.2</td>\n",
-       "      <td>22.8</td>\n",
-       "      <td>17.5</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>137.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Vitoria</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2011-01-01 00:15:00</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>84.1</td>\n",
-       "      <td>920.3</td>\n",
-       "      <td>20.1</td>\n",
-       "      <td>22.8</td>\n",
-       "      <td>17.4</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>76.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Vitoria</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2 rows × 57 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             Data_Hora  index  UmidadeRelativa_0  PressaoAtmosferica_0  \\\n",
-       "0  2011-01-01 00:00:00    0.0               84.8                 920.6   \n",
-       "1  2011-01-01 00:15:00    1.0               84.1                 920.3   \n",
-       "\n",
-       "   TemperaturaDoAr_0  TemperaturaInterna_0  PontoDeOrvalho_0  \\\n",
-       "0               20.2                  22.8              17.5   \n",
-       "1               20.1                  22.8              17.4   \n",
-       "\n",
-       "   SensacaoTermica_0  RadiacaoSolar_0  DirecaoDoVento_0  ...  \\\n",
-       "0                NaN              0.0             137.0  ...   \n",
-       "1                NaN              0.0              76.0  ...   \n",
-       "\n",
-       "   PressaoAtmosferica_4  TemperaturaDoAr_4 TemperaturaInterna_4  \\\n",
-       "0                   0.0                0.0                  0.0   \n",
-       "1                   0.0                0.0                  0.0   \n",
-       "\n",
-       "   PontoDeOrvalho_4  SensacaoTermica_4  RadiacaoSolar_4  DirecaoDoVento_4  \\\n",
-       "0               0.0                NaN              0.0               0.0   \n",
-       "1               0.0                NaN              0.0               0.0   \n",
-       "\n",
-       "   VelocidadeDoVento_4  Precipitacao_4  Local_4  \n",
-       "0                  0.0             0.0  Vitoria  \n",
-       "1                  0.0             0.0  Vitoria  \n",
-       "\n",
-       "[2 rows x 57 columns]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
@@ -165,32 +34,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/felipe/anaconda3/lib/python3.8/site-packages/pandas/core/indexing.py:966: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  self.obj[item] = s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "precipitacao_cols =  [c for c in ip.columns if 'Precipitacao' in c ]\n",
     "local_cols =  [c for c in ip.columns if 'Local' in c ]\n",
     "df_p = ip[ ['Data_Hora'] + local_cols + precipitacao_cols]\n",
-    "df_p.loc[:, 'Data_Hora'] = pd.to_datetime(df_p.loc[:,'Data_Hora'], yearfirst=True)"
+    "df_p.loc[:, 'Data_Hora'] = pd.to_datetime(df_p.loc[:,'Data_Hora'], yearfirst=True).copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,38 +248,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-10-bca8f778c296>:12: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_p[col+'_error'] = [zeros[i] or const_not_null[i] or is_nan[i] or peaks[i]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "start= 1707 - 200\n",
-    "stop = 1707 + 500\n",
+    "start= 280512\n",
+    "stop = 306720\n",
     "\n",
-    "n_days = 45\n",
+    "n_days = 15\n",
     "for col in precipitacao_cols:\n",
-    "    peaks = derivative_threshold(ip[col], 30, False, start, stop, lw = 2, figsize = (11, 15))\n",
-    "    zeros = derivative_zero(ip[col].fillna(0), n_days*24*4, False,\n",
+    "    \n",
+    "    # Derivative\n",
+    "    peaks = derivative_threshold(df_p[col], 30, False, start, stop, lw = 2, figsize = (11, 15))\n",
+    "    # Consecutive Zeros\n",
+    "    zeros = derivative_zero(df_p[col].fillna(0), n_days*24*4, False,\n",
     "                             plot = False, plt_start = start, plt_stop = stop)\n",
-    "    const_not_null = derivative_zero(ip[col].fillna(0), 8, True,\n",
+    "    # Consecutive Constant\n",
+    "    const_not_null = derivative_zero(df_p[col].fillna(0), 8, True,\n",
     "                             plot = False, plt_start = start, plt_stop = stop)\n",
-    "    is_nan = ip[col].isna()\n",
-    "    df_p[col+'_error'] = [zeros[i] or const_not_null[i] or is_nan[i] or peaks[i]\n",
-    "                          for i in range(len(df_p)) ]"
+    "    # Nans\n",
+    "    is_nan = df_p[col].isna()\n",
+    "    \n",
+    "    error = [zeros[i] or const_not_null[i] or is_nan[i] or peaks[i]\n",
+    "                          for i in range(len(df_p)) ]\n",
+    "\n",
+    "    error_reg = list_2_regions(error)\n",
+    "    error_reg = increase_margins(1, error_reg, len(peaks))\n",
+    "    error = regions_2_list(error_reg, len(peaks))\n",
+    "    \n",
+    "    try:\n",
+    "        df_p.insert(df_p.shape[1], col+'_error', error.copy())\n",
+    "    except:\n",
+    "        df_p.drop(columns = [col+'_error'], inplace = True)\n",
+    "        df_p.insert(df_p.shape[1], col+'_error', error.copy())"
    ]
   },
   {
@@ -439,8 +298,7 @@
     "py.offline.init_notebook_mode()\n",
     "fig = make_subplots(5,1, shared_xaxes=True, shared_yaxes=True )\n",
     "\n",
-    "ano = 2011\n",
-    "threshold = 50\n",
+    "ano = 2019\n",
     "\n",
     "ip_ano = df_p[df_p['Data_Hora'].dt.year == ano].fillna(0)\n",
     "color = ['#c62828', '#283593', '#00685b', '#f9a825', '#009688']\n",
@@ -487,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,28 +441,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/felipe/anaconda3/lib/python3.8/site-packages/pandas/core/indexing.py:966: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(5):\n",
+    "    print(i+1,'/5',)\n",
     "    df_p.loc[df_p[f'Precipitacao_{i}_error'], f'Precipitacao_{i}'] = \\\n",
-    "             df_p[df_p[f'Precipitacao_{i}_error']].apply(interpolate_rain, args = (0, distances), axis = 1 )"
+    "             df_p[df_p[f'Precipitacao_{i}_error']].apply(interpolate_rain,\n",
+    "                                                         args = (i, distances), axis = 1 ).copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_p.isna().sum()"
    ]
   },
   {
@@ -617,9 +471,8 @@
     "fig = make_subplots(5,1, shared_xaxes=True, shared_yaxes=True )\n",
     "\n",
     "ano = 2019\n",
-    "threshold = 50\n",
     "\n",
-    "ip_ano = df_p[df_p['Data_Hora'].dt.year == ano].fillna(0)\n",
+    "ip_ano = df_p[df_p['Data_Hora'].dt.year == ano]\n",
     "color = ['#c62828', '#283593', '#00685b', '#f9a825', '#009688']\n",
     "\n",
     "for i, col in enumerate(precipitacao_cols):\n",
@@ -651,38 +504,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Data_Hora                  0\n",
-       "Local_0                    0\n",
-       "Local_1                    0\n",
-       "Local_2                    0\n",
-       "Local_3                    0\n",
-       "Local_4                    0\n",
-       "Precipitacao_0          3337\n",
-       "Precipitacao_1          3342\n",
-       "Precipitacao_2          3342\n",
-       "Precipitacao_3          3342\n",
-       "Precipitacao_4          3342\n",
-       "Precipitacao_0_error       0\n",
-       "Precipitacao_1_error       0\n",
-       "Precipitacao_2_error       0\n",
-       "Precipitacao_3_error       0\n",
-       "Precipitacao_4_error       0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "for i in range(5):\n",
+    "    df_p.insert(df_p.shape[1], f'Precipitacao_b4_ow_{i}', df_p[f'Precipitacao_{i}'].copy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import timedelta\n",
+    "\n",
+    "def fill_ow( row , num , df_ow):\n",
+    "   \n",
+    "    rounded_hour = row['Data_Hora'].round('H')\n",
+    "    mask = pd.to_datetime(df_ow['Data_Hora']) == rounded_hour\n",
+    "    try:\n",
+    "        return df_ow.loc[mask,'Precipitacao'].item()\n",
+    "    except:\n",
+    "        mask = pd.to_datetime(df_ow['Data_Hora']) == rounded_hour + timedelta(hours=1)\n",
+    "        return df_ow.loc[mask,'Precipitacao'].item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_ow = pd.read_csv('../../../data/cleandata/OpenWeather/history_bulk.csv', sep = ';' )\n",
+    "df_ow['Data_Hora'] = pd.to_datetime(df_ow['Data_Hora'], yearfirst = True)\n",
+    "df_ow = df_ow.drop_duplicates(subset = 'Data_Hora' )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "for i in range(5):\n",
+    "    print(i+1,'/5',)\n",
+    "    df_p.loc[df_p[f'Precipitacao_{i}'].isna(), f'Precipitacao_{i}'] = \\\n",
+    "             df_p[df_p[f'Precipitacao_{i}'].isna()].apply(fill_ow, args = (i, df_ow), axis = 1 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "df_p.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "py.offline.init_notebook_mode()\n",
+    "fig = make_subplots(5,1, shared_xaxes=True, shared_yaxes=True )\n",
+    "\n",
+    "ano = 2019\n",
+    "\n",
+    "ip_ano = df_p[df_p['Data_Hora'].dt.year == ano]\n",
+    "color = ['#c62828', '#283593', '#00685b', '#f9a825', '#009688']\n",
+    "\n",
+    "for i, col in enumerate(precipitacao_cols):\n",
+    "    fig.add_trace(go.Scatter(\n",
+    "        x = ip_ano['Data_Hora'],\n",
+    "        y = ip_ano[col].fillna(0),\n",
+    "        showlegend = False,\n",
+    "        legendgroup=col,\n",
+    "        line = dict(color='#616161'),\n",
+    "        connectgaps=False\n",
+    "                            ),\n",
+    "                  row = i + 1, col = 1\n",
+    "                 )\n",
+    "\n",
+    "    fig.add_trace(go.Scatter(\n",
+    "        x = ip_ano['Data_Hora'],\n",
+    "        y = ip_ano[col].fillna(0).where(ip_ano[col+'_error'] &\n",
+    "                                        ~ip_ano[f'Precipitacao_b4_ow_{i}'].isna()),\n",
+    "        name = col,\n",
+    "        legendgroup=col,\n",
+    "        showlegend = False,\n",
+    "        line = dict(color='#c62828', width = 4),\n",
+    "        connectgaps=False\n",
+    "                            ),\n",
+    "                  row = i + 1, col = 1\n",
+    "                 )\n",
+    "    \n",
+    "    fig.add_trace(go.Scatter(\n",
+    "            x = ip_ano['Data_Hora'],\n",
+    "            y = ip_ano[col].where(ip_ano[f'Precipitacao_b4_ow_{i}'].isna()),\n",
+    "            name = col,\n",
+    "            legendgroup=col,\n",
+    "            showlegend = False,\n",
+    "            line = dict(color='#0398fc', width = 4),\n",
+    "            connectgaps=False\n",
+    "                                ),\n",
+    "                      row = i + 1, col = 1\n",
+    "                     )\n",
+    "    \n",
+    "fig.update_layout(height=1200, width=800)\n",
+    "fig.show()"
    ]
   }
  ],
